--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- <script src="Scripts/data/models/task.js"></script>
     <script src="Scripts/data/services/task-operations.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="./CSS/design.css">
     <script src="Scripts/controllers/task-controller.js" type="module"></script>
 </head>
 <body>
     <div class="container">
+        
         <h1 class="text-center alert-info">Task Manager App</h1>
 
         <div>
@@ -45,15 +48,15 @@
 
         <div>
             <button id="add" class="btn btn-primary">Add</button> &nbsp;
-            <button class="btn btn-danger">Delete</button> &nbsp;
-            <button class="btn btn-secondary">Update</button> &nbsp;
+            <button id="remove" class="btn btn-danger">Delete</button> &nbsp;
+            <button id="update" class="btn btn-secondary">Update</button> &nbsp;
             <button class="btn btn-info">Search</button> &nbsp;
             <button class="btn btn-success">Save</button> &nbsp;
             <button class="btn btn-secondary">Clear All</button> &nbsp;
         </div>
 
         <div id="result">
-            <h2>Total Records Marked Records Unmarked Records</h2>
+            <h2>Total Records <span id="total"></span> Marked Records <span id="mark"></span> Unmarked Records <span id="unmark"></span></h2>
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
@@ -67,7 +70,7 @@
                     </tr>
                 </thead>
 
-                <tbody id="output">
+                <tbody id="tasks">
 
                 </tbody>
             </table>
