--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             <button id="remove" class="btn btn-danger">Delete</button> &nbsp;
             <button id="update" class="btn btn-secondary">Update</button> &nbsp;
             <button class="btn btn-info">Search</button> &nbsp;
-            <button class="btn btn-success">Save</button> &nbsp;
-            <button class="btn btn-secondary">Clear All</button> &nbsp;
+            <button id="save" class="btn btn-success">Save</button> &nbsp;
+            <button id="load" class="btn btn-warning">Load</button> &nbsp;
+            <button id="load-from-server" class="btn btn-info">Load From Server</button> &nbsp;
+            <button id="clear-all" class="btn btn-secondary">Clear All</button> &nbsp;
         </div>
 
         <div id="result">
