--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button id="add" class="btn btn-primary">Add</button> &nbsp;
             <button id="remove" class="btn btn-danger">Delete</button> &nbsp;
             <button id="update" class="btn btn-secondary">Update</button> &nbsp;
-            <button class="btn btn-info">Search</button> &nbsp;
+            <button id="search" class="btn btn-info">Search</button> &nbsp;
             <button id="save" class="btn btn-success">Save</button> &nbsp;
             <button id="load" class="btn btn-warning">Load</button> &nbsp;
             <button id="load-from-server" class="btn btn-info">Load From Server</button> &nbsp;
